switch to new format

--- a/manifests/0000_05_config-operator_01_features.crd.yaml
+++ b/manifests/0000_05_config-operator_01_features.crd.yaml
@@ -11,3 +11,7 @@ spec:
     singular: features
     plural: features
     listKind: FeatureList
+  versions:
+    - name: v1
+      served: true
+      storage: true
