--- a/manifests/0000_05_config-operator_01_apiserver.crd.yaml
+++ b/manifests/0000_05_config-operator_01_apiserver.crd.yaml
@@ -4,10 +4,13 @@ metadata:
   name: apiservers.config.openshift.io
 spec:
   group: config.openshift.io
-  version: v1
   scope: Cluster
   names:
     kind: APIServer
     singular: apiserver
     plural: apiservers
     listKind: APIServerList
+  versions:
+    - name: v1
+      served: true
+      storage: true
