--- a/manifests/0000_05_config-operator_01_build.crd.yaml
+++ b/manifests/0000_05_config-operator_01_build.crd.yaml
@@ -4,10 +4,13 @@ metadata:
   name: builds.config.openshift.io
 spec:
   group: config.openshift.io
-  version: v1
   scope: Cluster
   names:
     kind: Build
     singular: build
     plural: builds
     listKind: BuildList
+  versions:
+    - name: v1
+      served: true
+      storage: true
