--- a/manifests/0000_05_config-operator_01_apiserver.crd.yaml
+++ b/manifests/0000_05_config-operator_01_apiserver.crd.yaml
@@ -14,3 +14,92 @@ spec:
   - name: v1
     served: true
     storage: true
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        spec:
+          properties:
+            clientCA:
+              description: 'clientCA references a ConfigMap containing a certificate
+                bundle for the signers that will be recognized for incoming client
+                certificates in addition to the operator managed signers. If this
+                is empty, then only operator managed signers are valid. You usually
+                only have to set this if you have your own PKI you wish to honor client
+                certificates from. The ConfigMap must exist in the openshift-config
+                namespace and contain the following required fields: - ConfigMap.Data["ca-bundle.crt"]
+                - CA bundle.'
+              properties:
+                name:
+                  description: name is the metadata.name of the referenced config
+                    map
+                  type: string
+              type: object
+            servingCerts:
+              description: servingCert is the TLS cert info for serving secure traffic.
+                If not specified, operator managed certificates will be used for serving
+                secure traffic.
+              properties:
+                defaultServingCertificate:
+                  description: 'defaultServingCertificate references a kubernetes.io/tls
+                    type secret containing the default TLS cert info for serving secure
+                    traffic. If no named certificates match the server name as understood
+                    by a client, this default certificate will be used. If defaultServingCertificate
+                    is not specified, then a operator managed certificate will be
+                    used. The secret must exist in the openshift-config namespace
+                    and contain the following required fields: - Secret.Data["tls.key"]
+                    - TLS private key. - Secret.Data["tls.crt"] - TLS certificate.'
+                  properties:
+                    name:
+                      description: name is the metadata.name of the referenced secret
+                      type: string
+                  type: object
+                namedCertificates:
+                  description: namedCertificates references secrets containing the
+                    TLS cert info for serving secure traffic to specific hostnames.
+                    If no named certificates are provided, or no named certificates
+                    match the server name as understood by a client, the defaultServingCertificate
+                    will be used.
+                  items:
+                    properties:
+                      names:
+                        description: names is a optional list of explicit DNS names
+                          (leading wildcards allowed) that should use this certificate
+                          to serve secure traffic. If no names are provided, the implicit
+                          names will be extracted from the certificates. Exact names
+                          trump over wildcard names. Explicit names defined here trump
+                          over extracted implicit names.
+                        items:
+                          type: string
+                        type: array
+                      servingCertificate:
+                        description: 'servingCertificate references a kubernetes.io/tls
+                          type secret containing the TLS cert info for serving secure
+                          traffic. The secret must exist in the openshift-config namespace
+                          and contain the following required fields: - Secret.Data["tls.key"]
+                          - TLS private key. - Secret.Data["tls.crt"] - TLS certificate.'
+                        properties:
+                          name:
+                            description: name is the metadata.name of the referenced
+                              secret
+                            type: string
+                        type: object
+                    type: object
+                  type: array
+              type: object
+          type: object
+        status:
+          type: object
+      required:
+      - spec
