--- a/manifests/0000_05_config-operator_01_image.crd.yaml
+++ b/manifests/0000_05_config-operator_01_image.crd.yaml
@@ -16,3 +16,117 @@ spec:
     storage: true
   subresources:
     status: {}
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          description: Standard object's metadata.
+          type: object
+        spec:
+          description: spec holds user settable values for configuration
+          properties:
+            additionalTrustedCA:
+              description: AdditionalTrustedCA is a reference to a ConfigMap containing
+                additional CAs that should be trusted during imagestream import, pod
+                image pull, and imageregistry pullthrough. The namespace for this
+                config map is openshift-config.
+              properties:
+                name:
+                  description: name is the metadata.name of the referenced config
+                    map
+                  type: string
+              type: object
+            allowedRegistriesForImport:
+              description: AllowedRegistriesForImport limits the container image registries
+                that normal users may import images from. Set this list to the registries
+                that you trust to contain valid Docker images and that you want applications
+                to be able to import from. Users with permission to create Images
+                or ImageStreamMappings via the API are not affected by this policy
+                - typically only administrators or system integrations will have those
+                permissions.
+              items:
+                properties:
+                  domainName:
+                    description: DomainName specifies a domain name for the registry
+                      In case the registry use non-standard (80 or 443) port, the
+                      port should be included in the domain name as well.
+                    type: string
+                  insecure:
+                    description: Insecure indicates whether the registry is secure
+                      (https) or insecure (http) By default (if not specified) the
+                      registry is assumed as secure.
+                    type: boolean
+                type: object
+              type: array
+            externalRegistryHostnames:
+              description: externalRegistryHostnames provides the hostnames for the
+                default external image registry. The external hostname should be set
+                only when the image registry is exposed externally. The first value
+                is used in 'publicDockerImageRepository' field in ImageStreams. The
+                value must be in "hostname[:port]" format.
+              items:
+                type: string
+              type: array
+            registrySources:
+              description: RegistrySources contains configuration that determines
+                how the container runtime should treat individual registries when
+                accessing images for builds+pods. (e.g. whether or not to allow insecure
+                access).  It does not contain configuration for the internal cluster
+                registry.
+              properties:
+                allowedRegistries:
+                  description: AllowedRegistries are whitelisted for image pull/push.
+                    All other registries are blocked.  Only one of BlockedRegistries
+                    or AllowedRegistries may be set.
+                  items:
+                    type: string
+                  type: array
+                blockedRegistries:
+                  description: BlockedRegistries are blacklisted from image pull/push.
+                    All other registries are allowed.  Only one of BlockedRegistries
+                    or AllowedRegistries may be set.
+                  items:
+                    type: string
+                  type: array
+                insecureRegistries:
+                  description: InsecureRegistries are registries which do not have
+                    a valid SSL certificate or only support HTTP connections.
+                  items:
+                    type: string
+                  type: array
+              type: object
+          type: object
+        status:
+          description: status holds observed values from the cluster. They may not
+            be overridden.
+          properties:
+            externalRegistryHostnames:
+              description: externalRegistryHostnames provides the hostnames for the
+                default external image registry. The external hostname should be set
+                only when the image registry is exposed externally. The first value
+                is used in 'publicDockerImageRepository' field in ImageStreams. The
+                value must be in "hostname[:port]" format.
+              items:
+                type: string
+              type: array
+            internalRegistryHostname:
+              description: this value is set by the image registry operator which
+                controls the internal registry hostname InternalRegistryHostname sets
+                the hostname for the default internal image registry. The value must
+                be in "hostname[:port]" format. For backward compatibility, users
+                can still use OPENSHIFT_DEFAULT_REGISTRY environment variable but
+                this setting overrides the environment variable.
+              type: string
+          type: object
+      required:
+      - spec
