--- a/glide.yaml
+++ b/glide.yaml
@@ -2,4 +2,6 @@ package: github.com/openshift/cluster-config-operator
 import:
 - package: github.com/openshift/library-go
   version: master
-
+- package: k8s.io/apiextensions-apiserver
+  repo: https://github.com/openshift/kubernetes-apiextensions-apiserver
+  version: origin-4.0-kubernetes-1.12.4
