--- a/manifests/0000_05_config-operator_01_feature.crd.yaml
+++ b/manifests/0000_05_config-operator_01_feature.crd.yaml
@@ -1,16 +1,16 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: features.config.openshift.io
+  name: featuregates.config.openshift.io
 spec:
   group: config.openshift.io
   version: v1
   scope: Cluster
   names:
-    kind: Feature
-    singular: features
-    plural: features
-    listKind: FeatureList
+    kind: FeatureGate
+    singular: featuregate
+    plural: featuregates
+    listKind: FeatureGateList
   versions:
   - name: v1
     served: true
