crq: add status sub-resource

--- a/manifests/0000_03_quota-openshift_01_clusterresourcequota.crd.yaml
+++ b/manifests/0000_03_quota-openshift_01_clusterresourcequota.crd.yaml
@@ -10,6 +10,8 @@ spec:
     plural: clusterresourcequotas
     singular: clusterresourcequota
   scope: Cluster
+  subresources:
+    status: {}
   versions:
   - name: v1
     served: true
