--- a/glide.yaml
+++ b/glide.yaml
@@ -4,4 +4,7 @@ import:
   version: master
 - package: k8s.io/apiextensions-apiserver
   repo: https://github.com/openshift/kubernetes-apiextensions-apiserver
-  version: origin-4.0-kubernetes-1.12.4
+  version: origin-4.1-kubernetes-1.13.4
+- package: sigs.k8s.io/controller-tools
+  repo: https://github.com/openshift/kubernetes-sigs-controller-tools
+  version: origin-4.1-kubernetes-1.13.4
