--- a/manifests/0000_10_config-operator_01_build.crd.yaml
+++ b/manifests/0000_10_config-operator_01_build.crd.yaml
@@ -61,14 +61,8 @@ spec:
                       type: string
                     noProxy:
                       description: noProxy is a comma-separated list of hostnames
-                        and/or CIDRs for which the proxy should not be used. Each
-                        name is matched as either a domain which contains the host
-                        name as a suffix, or the host name itself. For instance, example.com
-                        would match example.com, example.com:80, and www.example.com.
-                        Wildcard(*) characters are not accepted, except a single *
-                        character which matches all hosts and effectively disables
-                        the proxy. Empty means unset and will not result in an env
-                        var.
+                        and/or CIDRs for which the proxy should not be used. Empty
+                        means unset and will not result in an env var.
                       type: string
                   type: object
                 env:
@@ -94,14 +88,8 @@ spec:
                       type: string
                     noProxy:
                       description: noProxy is a comma-separated list of hostnames
-                        and/or CIDRs for which the proxy should not be used. Each
-                        name is matched as either a domain which contains the host
-                        name as a suffix, or the host name itself. For instance, example.com
-                        would match example.com, example.com:80, and www.example.com.
-                        Wildcard(*) characters are not accepted, except a single *
-                        character which matches all hosts and effectively disables
-                        the proxy. Empty means unset and will not result in an env
-                        var.
+                        and/or CIDRs for which the proxy should not be used. Empty
+                        means unset and will not result in an env var.
                       type: string
                   type: object
                 imageLabels:
