--- a/manifests/0000_10_config-operator_01_proxy.crd.yaml
+++ b/manifests/0000_10_config-operator_01_proxy.crd.yaml
@@ -14,6 +14,8 @@ spec:
     listKind: ProxyList
     plural: proxies
     singular: proxy
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
