specify status subresources for resoruces with empty status

--- a/manifests/0000_10_config-operator_01_project.crd.yaml
+++ b/manifests/0000_10_config-operator_01_project.crd.yaml
@@ -14,6 +14,8 @@ spec:
     listKind: ProjectList
     plural: projects
     singular: project
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
