--- a/manifests/0000_10_config-operator_01_featuregate.crd.yaml
+++ b/manifests/0000_10_config-operator_01_featuregate.crd.yaml
@@ -15,6 +15,8 @@ spec:
   - name: v1
     served: true
     storage: true
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
