--- a/manifests/0000_10_config-operator_01_scheduler.crd.yaml
+++ b/manifests/0000_10_config-operator_01_scheduler.crd.yaml
@@ -14,6 +14,8 @@ spec:
   - name: v1
     served: true
     storage: true
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
