--- a/manifests/0000_10_config-operator_01_apiserver.crd.yaml
+++ b/manifests/0000_10_config-operator_01_apiserver.crd.yaml
@@ -18,8 +18,10 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
-      description: APIServer holds cluster-wide information about api-servers.  The
-        canonical name is `cluster`
+      description: APIServer holds configuration (like serving certificates, client
+        CA and CORS domains) shared by all API servers in the system, among them especially
+        kube-apiserver and openshift-apiserver. The canonical name of an instance
+        is 'cluster'.
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
