--- a/manifests/0000_10_config-operator_01_authentication.crd.yaml
+++ b/manifests/0000_10_config-operator_01_authentication.crd.yaml
@@ -18,8 +18,9 @@ spec:
     storage: true
   validation:
     openAPIV3Schema:
-      description: Authentication holds cluster-wide information about Authentication.  The
-        canonical name is `cluster`
+      description: Authentication specifies cluster-wide settings for authentication
+        (like OAuth and webhook token authenticators). The canonical name of an instance
+        is `cluster`.
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
