--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,9 @@
 package: github.com/openshift/cluster-config-operator
 import:
 - package: github.com/openshift/library-go
-  version: master
+  version: release-4.1
+- package: github.com/openshift/api
+  version: release-4.1
 - package: k8s.io/apiextensions-apiserver
   repo: https://github.com/openshift/kubernetes-apiextensions-apiserver
   version: origin-4.1-kubernetes-1.13.4
