Update crd descriptions

--- a/manifests/0000_10_config-operator_01_build.crd.yaml
+++ b/manifests/0000_10_config-operator_01_build.crd.yaml
@@ -454,11 +454,12 @@ spec:
                         is responsible for reading ConfigMapNameReference, validating
                         the certificate and copying \"ca-bundle.crt\" from data to
                         a ConfigMap in the namespace of an operator configured for
-                        proxy. The namespace for this ConfigMap is \"openshift-config-managed\".
+                        proxy. The namespace for this ConfigMap is \"openshift-config\".
                         Here is an example ConfigMap (in yaml): \n apiVersion: v1
-                        kind: ConfigMap metadata:  name: proxy-ca  namespace: openshift-config-managed
-                        \ data:    ca-bundle.crt: |      -----BEGIN CERTIFICATE-----
-                        \     Custom CA certificate bundle.      -----END CERTIFICATE-----"
+                        kind: ConfigMap metadata:  name: trusted-ca-bundle  namespace:
+                        openshift-config  data:    ca-bundle.crt: |      -----BEGIN
+                        CERTIFICATE-----      Custom CA certificate bundle.      -----END
+                        CERTIFICATE-----"
                       properties:
                         name:
                           description: name is the metadata.name of the referenced
@@ -606,11 +607,12 @@ spec:
                         is responsible for reading ConfigMapNameReference, validating
                         the certificate and copying \"ca-bundle.crt\" from data to
                         a ConfigMap in the namespace of an operator configured for
-                        proxy. The namespace for this ConfigMap is \"openshift-config-managed\".
+                        proxy. The namespace for this ConfigMap is \"openshift-config\".
                         Here is an example ConfigMap (in yaml): \n apiVersion: v1
-                        kind: ConfigMap metadata:  name: proxy-ca  namespace: openshift-config-managed
-                        \ data:    ca-bundle.crt: |      -----BEGIN CERTIFICATE-----
-                        \     Custom CA certificate bundle.      -----END CERTIFICATE-----"
+                        kind: ConfigMap metadata:  name: trusted-ca-bundle  namespace:
+                        openshift-config  data:    ca-bundle.crt: |      -----BEGIN
+                        CERTIFICATE-----      Custom CA certificate bundle.      -----END
+                        CERTIFICATE-----"
                       properties:
                         name:
                           description: name is the metadata.name of the referenced
