--- a/manifests/0000_03_config-operator_01_proxy.crd.yaml
+++ b/manifests/0000_03_config-operator_01_proxy.crd.yaml
@@ -432,9 +432,9 @@ spec:
                 validator. The validator is responsible for reading ConfigMapNameReference,
                 validating the certificate and copying \"ca-bundle.crt\" from data
                 to a ConfigMap in the namespace of an operator configured for proxy.
-                The namespace for this ConfigMap is \"openshift-config-managed\".
-                Here is an example ConfigMap (in yaml): \n apiVersion: v1 kind: ConfigMap
-                metadata:  name: proxy-ca  namespace: openshift-config-managed  data:
+                The namespace for this ConfigMap is \"openshift-config\". Here is
+                an example ConfigMap (in yaml): \n apiVersion: v1 kind: ConfigMap
+                metadata:  name: trusted-ca-bundle  namespace: openshift-config  data:
                 \   ca-bundle.crt: |      -----BEGIN CERTIFICATE-----      Custom
                 CA certificate bundle.      -----END CERTIFICATE-----"
               properties:
