--- a/manifests/0000_10_config-operator_01_build.crd.yaml
+++ b/manifests/0000_10_config-operator_01_build.crd.yaml
@@ -18,8 +18,10 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
-      description: Build holds cluster-wide information on how to handle builds. The
-        canonical name is `cluster`
+      description: "Build configures the behavior of OpenShift builds for the entire
+        cluster. This includes default settings that can be overridden in BuildConfig
+        objects, and overrides which are applied to all builds. \n The canonical name
+        is \"cluster\""
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -406,9 +408,11 @@ spec:
           description: Spec holds user-settable values for the build controller configuration
           properties:
             additionalTrustedCA:
-              description: AdditionalTrustedCA is a reference to a ConfigMap containing
+              description: "AdditionalTrustedCA is a reference to a ConfigMap containing
                 additional CAs that should be trusted for image pushes and pulls during
-                builds. The namespace for this config map is openshift-config.
+                builds. The namespace for this config map is openshift-config. \n
+                DEPRECATED: Additional CAs for image pull and push should be set on
+                image.config.openshift.io/cluster instead."
               properties:
                 name:
                   description: name is the metadata.name of the referenced config
