--- a/manifests/0000_10_config-operator_01_ingress.crd.yaml
+++ b/manifests/0000_10_config-operator_01_ingress.crd.yaml
@@ -18,9 +18,8 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
-      description: Ingress holds cluster-wide information about Ingress.  The canonical
-        name is `cluster` TODO this object is an example of a possible grouping and
-        is subject to change or removal
+      description: Ingress holds cluster-wide information about ingress, including
+        the default ingress domain used for routes. The canonical name is `cluster`.
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -406,9 +405,12 @@ spec:
           description: spec holds user settable values for configuration
           properties:
             domain:
-              description: 'domain is used to generate a default host name for a route
-                when the route''s host name is empty.  The generated host name will
-                follow this pattern: "<route-name>.<route-namespace>.<domain>".'
+              description: "domain is used to generate a default host name for a route
+                when the route's host name is empty. The generated host name will
+                follow this pattern: \"<route-name>.<route-namespace>.<domain>\".
+                \n It is also used as the default wildcard domain suffix for ingress.
+                The default ingresscontroller domain will follow this pattern: \"*.<domain>\".
+                \n Once set, changing domain is not currently supported."
               type: string
           type: object
         status:
