--- a/manifests/0000_10_config-operator_01_network.crd.yaml
+++ b/manifests/0000_10_config-operator_01_network.crd.yaml
@@ -16,9 +16,11 @@ spec:
     storage: true
   validation:
     openAPIV3Schema:
-      description: Network holds cluster-wide information about Network.  The canonical
-        name is `cluster` TODO this object is an example of a possible grouping and
-        is subject to change or removal
+      description: 'Network holds cluster-wide information about Network. The canonical
+        name is `cluster`. It is used to configure the desired network configuration,
+        such as: IP address pools for services/pod IPs, network plugin, etc. Please
+        view network.spec for an explanation on what applies when configuring this
+        resource.'
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -401,10 +403,15 @@ spec:
               type: string
           type: object
         spec:
-          description: spec holds user settable values for configuration.
+          description: spec holds user settable values for configuration. As a general
+            rule, this SHOULD NOT be read directly. Instead, you should consume the
+            NetworkStatus, as it indicates the currently deployed configuration. Currently,
+            most spec fields are immutable after installation. Please view the individual
+            ones for further details on each.
           properties:
             clusterNetwork:
-              description: IP address pool to use for pod IPs.
+              description: IP address pool to use for pod IPs. This field is immutable
+                after installation.
               items:
                 description: ClusterNetworkEntry is a contiguous block of IP addresses
                   from which pod IPs are allocated.
@@ -455,11 +462,11 @@ spec:
               description: 'NetworkType is the plugin that is to be deployed (e.g.
                 OpenShiftSDN). This should match a value that the cluster-network-operator
                 understands, or else no networking will be installed. Currently supported
-                values are: - OpenShiftSDN'
+                values are: - OpenShiftSDN This field is immutable after installation.'
               type: string
             serviceNetwork:
               description: IP address pool for services. Currently, we only support
-                a single entry here.
+                a single entry here. This field is immutable after installation.
               items:
                 type: string
               type: array
