--- a/manifests/0000_10_config-operator_01_image.crd.yaml
+++ b/manifests/0000_10_config-operator_01_image.crd.yaml
@@ -18,8 +18,12 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
-      description: Image holds cluster-wide information about how to handle images.  The
-        canonical name is `cluster`
+      description: Image governs policies related to imagestream imports and runtime
+        configuration for external registries. It allows cluster admins to configure
+        which registries OpenShift is allowed to import images from, extra CA trust
+        bundles for external registries, and policies to blacklist/whitelist registry
+        hostnames. When exposing OpenShift's image registry to the public, this also
+        lets cluster admins specify the external hostname.
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -405,10 +409,10 @@ spec:
           description: spec holds user settable values for configuration
           properties:
             additionalTrustedCA:
-              description: AdditionalTrustedCA is a reference to a ConfigMap containing
+              description: additionalTrustedCA is a reference to a ConfigMap containing
                 additional CAs that should be trusted during imagestream import, pod
-                image pull, and imageregistry pullthrough. The namespace for this
-                config map is openshift-config.
+                image pull, build image pull, and imageregistry pullthrough. The namespace
+                for this config map is openshift-config.
               properties:
                 name:
                   description: name is the metadata.name of the referenced config
@@ -418,7 +422,7 @@ spec:
               - name
               type: object
             allowedRegistriesForImport:
-              description: AllowedRegistriesForImport limits the container image registries
+              description: allowedRegistriesForImport limits the container image registries
                 that normal users may import images from. Set this list to the registries
                 that you trust to contain valid Docker images and that you want applications
                 to be able to import from. Users with permission to create Images
@@ -431,12 +435,12 @@ spec:
                   wildcards, like '*' or '??'.
                 properties:
                   domainName:
-                    description: DomainName specifies a domain name for the registry
+                    description: domainName specifies a domain name for the registry
                       In case the registry use non-standard (80 or 443) port, the
                       port should be included in the domain name as well.
                     type: string
                   insecure:
-                    description: Insecure indicates whether the registry is secure
+                    description: insecure indicates whether the registry is secure
                       (https) or insecure (http) By default (if not specified) the
                       registry is assumed as secure.
                     type: boolean
@@ -452,28 +456,28 @@ spec:
                 type: string
               type: array
             registrySources:
-              description: RegistrySources contains configuration that determines
+              description: registrySources contains configuration that determines
                 how the container runtime should treat individual registries when
                 accessing images for builds+pods. (e.g. whether or not to allow insecure
                 access).  It does not contain configuration for the internal cluster
                 registry.
               properties:
                 allowedRegistries:
-                  description: "AllowedRegistries are whitelisted for image pull/push.
+                  description: "allowedRegistries are whitelisted for image pull/push.
                     All other registries are blocked. \n Only one of BlockedRegistries
                     or AllowedRegistries may be set."
                   items:
                     type: string
                   type: array
                 blockedRegistries:
-                  description: "BlockedRegistries are blacklisted from image pull/push.
+                  description: "blockedRegistries are blacklisted from image pull/push.
                     All other registries are allowed. \n Only one of BlockedRegistries
                     or AllowedRegistries may be set."
                   items:
                     type: string
                   type: array
                 insecureRegistries:
-                  description: InsecureRegistries are registries which do not have
+                  description: insecureRegistries are registries which do not have
                     a valid TLS certificates or only support HTTP connections.
                   items:
                     type: string
@@ -494,12 +498,12 @@ spec:
                 type: string
               type: array
             internalRegistryHostname:
-              description: this value is set by the image registry operator which
-                controls the internal registry hostname InternalRegistryHostname sets
-                the hostname for the default internal image registry. The value must
-                be in "hostname[:port]" format. For backward compatibility, users
-                can still use OPENSHIFT_DEFAULT_REGISTRY environment variable but
-                this setting overrides the environment variable.
+              description: internalRegistryHostname sets the hostname for the default
+                internal image registry. The value must be in "hostname[:port]" format.
+                This value is set by the image registry operator which controls the
+                internal registry hostname. For backward compatibility, users can
+                still use OPENSHIFT_DEFAULT_REGISTRY environment variable but this
+                setting overrides the environment variable.
               type: string
           type: object
       required:
