--- a/glide.yaml
+++ b/glide.yaml
@@ -1,10 +1,9 @@
 package: github.com/openshift/cluster-config-operator
 import:
-- package: github.com/openshift/library-go
-  version: master
-- package: k8s.io/component-base
-  version: release-1.14
-- package: github.com/prometheus/client_golang
-  version: 505eaef017263e299324067d40ca2c48f6a2cf50
-- package: github.com/prometheus/procfs
-  version: 65c1f6f8f0fc1e2185eb9863a3bc751496404259
+  - package: k8s.io/klog
+    version: v1.0.0
+
+  - package: github.com/openshift/api
+    version: master
+  - package: github.com/openshift/library-go
+    version: master
