--- a/manifests/0000_10_config-operator_01_apiserver.crd.yaml
+++ b/manifests/0000_10_config-operator_01_apiserver.crd.yaml
@@ -290,6 +290,10 @@ spec:
                     can and will change over time.  The current authoritative list
                     is: \n   1. secrets   2. configmaps   3. routes.route.openshift.io
                     \  4. oauthaccesstokens.oauth.openshift.io   5. oauthauthorizetokens.oauth.openshift.io"
+                  enum:
+                  - ""
+                  - identity
+                  - aescbc
                   type: string
               type: object
             servingCerts:
