manifests: fix metrics labels

--- a/manifests/0000_30_config-operator_03_servicemonitor.yaml
+++ b/manifests/0000_30_config-operator_03_servicemonitor.yaml
@@ -18,5 +18,5 @@ spec:
     - openshift-config-operator
   selector:
     matchLabels:
-      app: config-operator
+      app: openshift-config-operator
 
