--- a/manifests/0000_30_config-operator_02_service.yaml
+++ b/manifests/0000_30_config-operator_02_service.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     service.alpha.openshift.io/serving-cert-secret-name: config-operator-serving-cert
   labels:
-    app: config-operator
+    app: openshift-config-operator
   name: metrics
   namespace: openshift-config-operator
 spec:
@@ -14,6 +14,6 @@ spec:
     protocol: TCP
     targetPort: 8443
   selector:
-    app: config-operator
+    app: openshift-config-operator
   sessionAffinity: None
   type: ClusterIP
