bug 1871890: add current profile annotations to CVO manifests
This is matches https://github.com/openshift/enhancements/pull/414 and doesn't change existing behavior

--- a/manifests/0000_30_config-operator_05_serviceaccount.yaml
+++ b/manifests/0000_30_config-operator_05_serviceaccount.yaml
@@ -3,5 +3,7 @@ kind: ServiceAccount
 metadata:
   namespace: openshift-config-operator
   name: openshift-config-operator
+  annotations:
+    include.release.openshift.io/self-managed-high-availability: "true"
   labels:
     app: openshift-config-operator
